--- a/vignettes/fars_functions.Rmd
+++ b/vignettes/fars_functions.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 ```
 
 
-```{r libs, include = FALSE}
+```{r libs}
 library(dplyr)
 library(readr)
 library(tidyr)
@@ -32,9 +32,10 @@ Reads data from FARS, a nationwide database of reported wrecks and fatalitits on
 
 Code was built to look through three of the provided data sets and return the matching file. It will then read the file and return a table.
 
-```{r read data file, inlcude = FALSE, eval = FALSE}
+```{r read data file, eval = TRUE}
 library(fars)
-fars_read("accident_2015.csv.bz2")
+t <- system.file("extdata", "accident_2013.csv.bz2", package="fars") 
+fars_read(t)
 ```
 
 ### *Create a file name*
@@ -42,8 +43,8 @@ This function creates the file name when given year as input.
 
 This function returns a character string with coding "accident_year.csv.bz2"
 
-```{r make file name, inlcude = FALSE, eval = FALSE}
-make_filename(c(2013, 2014, 2015))
+```{r make file name, eval =  TRUE}
+make_filename(2013)
 ```
 
 ### *Read Data & Summarize*
@@ -54,23 +55,18 @@ When passing the function a list of valid years as input, it gets associated fil
 
 This function returns a list of tables corresponding to list of years.
 
-```{r summary, include = FALSE, eval = FALSE}
-fars_read_years(c(2013,2014,2015))
+```{r summary}
+fars_read_years(c(2013, 2014, 2015))
 ```
 
 ### *Summarize Years*
 
 This function receives a list of years as an input and gets data tables with \code{fars_read_years} Then it summarizes the results per year.
 
-```{r summarize years, include = FALSE, eval = FALSE}
-fars_summarize_years(c(2013,2014,2015))
-```
-
-
 ### *Map it out*
 
 This function gets passed a specific state and year, then gets associated data. If the state exists, it filters the data per state and plots accidents for that state.
 
-```{r map it, include = FALSE, eval = FALSE}
-fars_map_state(state.num=1,year=2015)
+```{r, eval = FALSE}
+fars_map_state(state.num=1,year=2013)
 ```
